--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
     environment:
       - SPARK_MODE=master
       - SPARK_MASTER_HOST=spark
+      - HIVE_METASTORE_URI=thrift://hive-metastore:9083
     ports:
       - "8080:8080" # Spark Web UI
     networks:
@@ -58,6 +59,7 @@ services:
     environment:
       - SPARK_MODE=worker
       - SPARK_MASTER_URL=spark://spark:7077
+      - HIVE_METASTORE_URI=thrift://hive-metastore:9083
     depends_on:
       - spark
     networks:
