--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       - my_network
 
   hive-server:
-    image: bde2020/hive:2.3.2-postgresql-metastore
+    image: bde2020/hive:2.3.2
     container_name: hive-server
     environment:
       HIVE_METASTORE_URI: thrift://hive-metastore:9083
@@ -48,6 +48,30 @@ services:
       - hive-metastore
     ports:
       - "10000:10000"
+    networks:
+      - my_network
+
+  hdfs-namenode:
+    image: bde2020/hadoop-namenode:2.0.0-hadoop2.7.4-java8
+    container_name: hdfs-namenode
+    environment:
+      - CLUSTER_NAME=test
+    ports:
+      - "8020:8020"
+      - "50070:50070"
+    networks:
+      - my_network
+
+  hdfs-datanode:
+    image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
+    container_name: hdfs-datanode
+    environment:
+      - CLUSTER_NAME=test
+      - CORE_CONF_fs_defaultFS=hdfs://hdfs-namenode:8020
+    depends_on:
+      - hdfs-namenode
+    ports:
+      - "50075:50075"
     networks:
       - my_network
 
@@ -100,7 +124,19 @@ services:
       - ./trino-config/catalog:/etc/trino/catalog  # Mount configuration directory
       - ./trino-config/presto:/data/presto
       - ./warehouse:/opt/hive/data/warehouse
-
+  
+  jupyter:
+    image: jupyter/pyspark-notebook:latest
+    container_name: jupyter
+    environment:
+      JUPYTER_ENABLE_LAB: "yes"
+    ports:
+      - "8888:8888"
+    networks:
+      - my_network
+    volumes:
+      - ./notebooks:/home/jovyan/work
+      
 networks:
   my_network:
     driver: bridge
